# felspa

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: cxx_compiler_checks.cmake  setup_cached_variables.cmake  setup_cmake_macros.cmake  setup_compiler_flags.cmake  setup_depend_packages.cmake  setup_felspa_general.cmake
cmake/config/: CMakeLists.txt  Config.cmake.in  ConfigVersion.cmake.in
cmake/macros/: append_flag_if_supported.cmake  cmake_include_verbose.cmake  explicit_instantiate.cmake  felspa_add_module.cmake  promote_to_cache.cmake  set_if_empty.cmake
cmake/modules/: FindLibBacktrace.cmake
cmake/tools/: CMakeLists.txt  template_arguments.in
doc/: felspa_doxyfile
examples/: CMakeLists.txt  example_porphyroclast.cc  example_porphyroclast.pvsm  example_porphyroclast_2d.pvsm  example_porphyroclast_Bons1997.cc  example_porphyroclast_Bons1997.h  example_porphyroclast_animation.pvsm  example_porphyroclast_figure.pvsm
include/: CMakeLists.txt
include/felspa/base/: base_classes.h  constants.h  control_parameters.h  exceptions.h  felspa_config.h.in  function.h  io.h  log.h  numerics.h  quadrature.h  types.h  utilities.h
include/felspa/base/src/: base_classes.implement.h  exception_classes.h  exceptions.implement.h  function.implement.h  numerics.implement.h  utilities.implement.h
include/felspa/coupled/: level_set_stokes.h
include/felspa/coupled/src/: level_set_stokes.implement.h
include/felspa/fe/: cell_data.h  sync_iterators.h
include/felspa/fe/src/: cell_data.implement.h  sync_iterators.implement.h
include/felspa/level_set/: geometry.h  level_set.h  material_stack.h  reinit.h  velocity_field.h
include/felspa/level_set/src/: level_set.implement.h  material_stack.implement.h
include/felspa/linear_algebra/: ilu.h  linear_operators.h  linear_system.h  solution_vector.h  system_assembler.h
include/felspa/linear_algebra/src/: ilu.implement.h  linear_operators.implement.h  linear_system.implement.h  system_assembler.implement.h
include/felspa/mesh/: mesh.h  mesh_refine.h
include/felspa/mesh/src/: mesh.implement.h  mesh_refine.implement.h
include/felspa/pde/: advection.h  boundary_conditions.h  diffusion.h  hamilton_jacobi.h  ldg.h  linear_systems.h  pde_base.h  pde_tools.h  stokes.h  stokes_common.h  stokes_ilu.h  stokes_trilinos.h  time_integration.h
include/felspa/pde/src/: advection.implement.h  boundary_conditions.implement.h  ldg.implement.h  linear_systems.implement.h  pde_base.implement.h  pde_tools.implement.h  stokes_common.implement.h  stokes_trilinos.implement.h  time_integration.implement.h
include/felspa/physics/: functions.h  material_base.h  viscous_flow.h
include/felspa/physics/src/: viscous_flow.implement.h
python/felspanalyst/: neoarchean.py  paraview_filters.py  particle.py  plot_vtk.py  porphyroclast_analysis.py  rayleigh_taylor_analysis.py  util.py
src/: CMakeLists.txt
src/base/: CMakeLists.txt  base_classes.cc  exceptions.cc  function.cc  io.cc  log.cc  quadrature.cc  utilities.cc
src/coupled/: CMakeLists.txt  level_set_stokes.cc
src/fe/: CMakeLists.txt  cell_data.cc  sync_iterators.cc
src/level_set/: CMakeLists.txt  geometry.cc  geometry.inst.in  level_set.cc  level_set.inst.in  material_stack.cc  reinit.cc  velocity_field.cc  velocity_field.inst.in
src/linear_algebra/: CMakeLists.txt  ilu.cc  linear_system.cc  linear_system.inst.in  solution_vector.cc  system_assembler.cc  system_assembler.inst.in
src/mesh/: CMakeLists.txt  mesh_refine.cc
src/pde/: CMakeLists.txt  advection.cc  advection.inst.in  boundary_conditions.cc  boundary_conditions.inst.in  diffusion.cc  hamilton_jacobi.cc  hamilton_jacobi.inst.in  ldg.cc  ldg.inst.in  linear_systems.cc  pde_base.cc  pde_tools.cc  stokes_common.cc  stokes_ilu.cc  stokes_trilinos.cc  time_integration.cc  time_integration.inst.in
src/physics/: CMakeLists.txt  functions.cc  material_base.cc  viscous_flow.cc
tests/: CMakeLists.txt  test_rayleigh_taylor.cc  test_rayleigh_taylor.h  test_stokes.cc  test_zalesak_disk.cc
